--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
   /* tokens */
   /* font-family */
-  --font-body: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+  --font-body: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
   /* palette */
