--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1604,7 +1604,7 @@ input[type="checkbox"]:checked ~ .backdrop1 {
   background: rgba(0,0,0,0.70);
   margin:4px 0;
   border-radius:12px;
-  color:#fff;
+  color:rgb(205, 210, 221);
 }
 
 .signbox{
